# real-time-analytics-pipeline

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  postgres-deployment.yaml  redis-deployment.yaml  service.yaml
deploy/scripts/: init_db.sh  seed_data.py
docs/api/: openapi.json
src/: __init__.py  config.py  main.py
src/api/: dependencies.py  errors.py
src/api/middleware/: __init__.py  auth.py  correlation.py  cors.py  logging.py  rate_limit.py  security.py  size_limiter.py
src/api/routes/: admin.py  analytics.py  auth.py  dashboards.py  events.py  health.py
src/api/websocket/: handlers.py  manager.py
src/core/: __init__.py  aggregator.py  analytics_service.py  event_processor.py  retention.py  sampling.py
src/domain/: __init__.py  events.py  interfaces.py  models.py  value_objects.py
src/infrastructure/: __init__.py  logging.py  metrics.py  tracing.py
src/infrastructure/cache/: redis.py
src/infrastructure/database/: models.py  repositories.py  session.py
src/infrastructure/queue/: kafka.py  redis_streams.py
tests/: conftest.py
tests/e2e/: test_pipeline_flow.py
tests/integration/: conftest.py  test_api_analytics.py  test_api_auth.py  test_api_events.py
tests/load/: k6-script.js
tests/unit/: test_aggregator.py  test_analytics_service.py  test_config.py  test_domain_models.py  test_event_processor.py  test_retention.py  test_sampler.py  test_value_objects.py
